# aoc-rust

./: Cargo.toml  README.md
src/lib/: aoc.rs  lib.rs  std.rs
src/lib/aoc/: inputs.rs  part.rs
