[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2201_aoc"
path = "./src/bin/2022/01/main.rs"

[[bin]]
name = "2202_aoc"
path = "./src/bin/2022/02/main.rs"

[[bin]]
name = "2203_aoc"
path = "./src/bin/2022/03/main.rs"

[[bin]]
name = "2204_aoc"
path = "./src/bin/2022/04/main.rs"

[[bin]]
name = "2205_aoc"
path = "./src/bin/2022/05/main.rs"

[lib]
name = "util"
path = "./src/lib/lib.rs"

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"