[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1501_aoc"
path = "./src/bin/2015/01/main.rs"

[[bin]]
name = "1502_aoc"
path = "./src/bin/2015/02/main.rs"

[[bin]]
name = "1503_aoc"
path = "./src/bin/2015/03/main.rs"

[[bin]]
name = "1504_aoc"
path = "./src/bin/2015/04/main.rs"

[[bin]]
name = "1506_aoc"
path = "./src/bin/2015/06/main.rs"

[[bin]]
name = "1507_aoc"
path = "./src/bin/2015/07/main.rs"

[[bin]]
name = "1601_aoc"
path = "./src/bin/2016/01/main.rs"

[[bin]]
name = "2201_aoc"
path = "./src/bin/2022/01/main.rs"

[[bin]]
name = "2202_aoc"
path = "./src/bin/2022/02/main.rs"

[[bin]]
name = "2203_aoc"
path = "./src/bin/2022/03/main.rs"

[[bin]]
name = "2204_aoc"
path = "./src/bin/2022/04/main.rs"

[[bin]]
name = "2205_aoc"
path = "./src/bin/2022/05/main.rs"

[[bin]]
name = "2206_aoc"
path = "./src/bin/2022/06/main.rs"

[[bin]]
name = "2207_aoc"
path = "./src/bin/2022/07/main.rs"

[[bin]]
name = "2208_aoc"
path = "./src/bin/2022/08/main.rs"

[[bin]]
name = "2209_aoc"
path = "./src/bin/2022/09/main.rs"

[[bin]]
name = "2212_aoc"
path = "./src/bin/2022/12/main.rs"

[[bin]]
name = "2213_aoc"
path = "./src/bin/2022/13/main.rs"

[lib]
name = "util"
path = "./src/lib/lib.rs"

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"
itertools = "0.10.5"
nom = "7.1.3"
md5 = "0.7.0"

[dev-dependencies]
rstest = "0.17.0"
pretty_assertions = "1.3.0"
